# Signature-Extractor

./: .gitignore  README.md  main.py  pyproject.toml
signature_bg_remove/: gui.py  img.py  main.py  utils.py
