[tool.poetry]
name = "smartsignatures"
version = "0.1.0"
description = ""
authors = ["Ved Kothavade <kothavade.ved@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.6.0"
PyGObject = "^3.42.2"

[tool.poetry.dev-dependencies]
pylint = "^2.15.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
